<resources>

    <string name="ej_carretera_admon">Tipo de administracion que tiene la carretera: Concesión,
        Mantenimineto Integral(MTTO Integral) o Administradores viales(A.M.V.</string>
    <string name="ej_carretera_administracion">A.M.V.</string>
    <string name="ej_carretera_levantado">Alejandro Zorrilla</string>
    <string name="ejemplo">Ejemplo</string>
    <string name="app_name">I.V.P.</string>
    <string name="app_name_complete">Inspección Visual de Pavimentos</string>
    <string name="espelosa">Espesor Losa</string>
    <string name="regis">REGISTRAR CARRETERA</string>
    <string name="consul">CONSULTAR CARRETERA</string>
    <string name="regissegFlex">REGISTRAR SEGMENTO FLEXIBLE</string>
    <string name="regissegRigi">REGISTRAR SEGMENTO RíGIDO</string>
    <string name="segRegis">SE REGISTRÓ EL SEGMENTO</string>
    <string name="petoRegis">SE REGISTRÓ EL DAÑO</string>
    <string name="regisSeg">REGISTRAR SEGMENTO</string>
    <string name="consulSeg">CONSULTAR SEGMENTOS</string>
    <string name="regisPatologias">REGISTRO PATOLOGIAS</string>
    <string name="consulPato">CONSULTAR PATOLOGIAS</string>
    <string name="datosSegmento">DATOS SEGMENTO</string>
    <string name="exportar">Exportar</string>
    <string name="id">ID</string>
    <string name="nombre">Nombre: </string>
    <string name="codigo">Código:</string>
    <string name="territorial">Territorial: </string>
    <string name="admon">Concesión, MTTO Integral, A.M.V</string>
    <string name="levantado">Levantado por: </string>
    <string name="buscar">BUSCAR</string>
    <string name="editar">EDITAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="title_activity_consultar_carretera">ConsultarCarreteraActivity</string>
    <string name="datosCarretera">Datos Carretera</string>
    <string name="segmento">Segmento</string>
    <string name="adminstracion">Administracion</string>
    <string name="vacio">Vacio</string>
    <string name="pavFlex">Pavimento Flexible</string>
    <string name="pavRigi">Pavimento Rigido</string>
    <string name="nCalzadas">Calzadas</string>
    <string name="nCarriles">Carriles por calzada</string>
    <string name="anchoCarril">Carril </string>
    <string name="anchoBerma">Berma </string>
    <string name="espesorLosa">Espesor losa (mm)</string>
    <string name="pri">PRI</string>
    <string name="prf">PRF</string>
    <string name="comentarios">Comentarios</string>
    <string name="numero">Número de: </string>
    <string name="ancho">Ancho (m):</string>
    <string name="carril">Carril</string>
    <string name="patologia">Patología</string>
    <string name="codPato">Codígo daño</string>
    <string name="danio">Dimensiones daño (m)</string>
    <string name="danio_activity">Daño</string>
    <string name="largo">Largo</string>
    <string name="anchoD">Ancho </string>
    <string name="puntoReferencia">Puntos de referencia</string>
    <string name="reparacion">Dimensiones Reparación (m)</string>
    <string name="aclaraciones">Aclaraciones</string>
    <string name="registroPato">Registro Patología</string>
    <string name="tipoPav">Tipo de pavimento: </string>
    <string name="anchocarril">Ancho carril(m)</string>
    <string name="anchoberma">Ancho berma(m)</string>
    <string name="seleccioneDanio">Seleccione el tipo de daño</string>
    <string name="editarSegmento">EDITAR SEGMENTO</string>
    <string name="editarCarretera">Editar CARRETERA</string>
    <string name="validarNCalzadas">Ingrese el numero de calzadas</string>
    <string name="validarNCarriles">Ingrese el numero de carriles</string>
    <string name="validarAnchoCarril">Ingrese el ancho del carril</string>
    <string name="validarAnchoBerma">Ingrese el ancho de la berma</string>
    <string name="validarPri">Ingrese el PRI</string>
    <string name="abscisa">Abscisa</string>
    <string name="coordenadas">Obtener Coordenadas</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="patoFlex">Registro Daños Pav. Flex.</string>
    <string name="fecha">Fecha</string>
    <string name="severidad">Severidad</string>
    <string name="ej_carretera_nombre">Transversal Las Animas - Bogotá</string>
    <string name="ej_carretera_codigo">5008A</string>
    <string name="ej_carretera_territorial">Cundinamarca</string>
    <string name="ej_registro_carretera">Ejemplo Registro Carretera</string>


    <!--Daños Pavimento Flexible!-->
    <string name="fisuras_long_transversales">Fisuras Longitudinales y transversales</string>
    <string name="fisuras_fl_lt">FL,FT</string>
    <string name="fisura_construccion">Fisura longitudinal en junta de construcción</string>
    <string name="fisura_fcl">FCL</string>
    <string name="fisura_reflexion">Fisuras por reflexión de juntas o grietas en placas de concreto</string>
    <string name="fisura_fjl">FJL o FJT</string>
    <string name="fisura_medialuna">Fisuras en medialuna</string>
    <string name="fisura_fml">FML</string>
    <string name="fisura_borde">Fisuras de borde</string>
    <string name="fbd">FBD</string>
    <string name="fisura_bloque">Fisuras en bloque</string>
    <string name="fisura_fb">FB</string>
    <string name="piel_cocodrilo">Piel de cocodrilo</string>
    <string name="pc">PC</string>
    <string name="fisura_desplazamiento">Fisuración por desplazamiento de capas</string>
    <string name="fdc">FDC</string>
    <string name="fisura_incipiente">Fisuración incipiente</string>
    <string name="fin">FIN</string>
    <string name="ondulacion">Ondulación</string>
    <string name="ond">OND</string>
    <string name="abultamiento">Abultamiento</string>
    <string name="ab">AB</string>
    <string name="hundimiento">Hundimiento</string>
    <string name="hun">HUN</string>
    <string name="ahuellamiento">Ahuellamiento</string>
    <string name="ahu">AHU</string>
    <string name="descascaramientof">Descascaramiento </string>
    <string name="dcf">DC</string>
    <string name="bachesf">Baches</string>
    <string name="bchf">BCH</string>
    <string name="parche">Parche</string>
    <string name="pch">PCH</string>
    <string name="desgaste_superficial">Desgaste superficial</string>
    <string name="dsu">DSU</string>
    <string name="perdida_agregado">Perdida de agregado</string>
    <string name="pa">PA</string>
    <string name="pulimentof_agregado">Pulimento del agregado</string>
    <string name="puf">PU</string>
    <string name="cabeza_dura">cabezas duras</string>
    <string name="cd">CD</string>
    <string name="exudacion">Exudación</string>
    <string name="ex">EX</string>
    <string name="surcos">Surcos</string>
    <string name="su">SU</string>
    <string name="corrimiento_berma">Corrimiento vertical de la berma</string>
    <string name="cvb">CVB</string>
    <string name="separación_bermaf">Separación de la berma</string>
    <string name="sbf">SB</string>
    <string name="afloramiento_finos">Afloramiento de finos</string>
    <string name="afi">AFI</string>
    <string name="afloramiento_agua">Afloramiento de agua</string>
    <string name="afa">AFA</string>
    <string name="title_activity_carretera_scroll">CarreteraScrollActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--Daños Pavimento Rígido!-->
    <string name="grieta_esquina">Grieta de esquina</string>
    <string name="g_e">GE</string>
    <string name="grieta_longitudinal">Grieta longitudinal</string>
    <string name="g_l">GL</string>
    <string name="grieta_transversal">Grieta transversal</string>
    <string name="g_t">GT</string>
    <string name="grieta_pasadores">Grieta en los extremos de los pasadores</string>
    <string name="g_p">GP</string>
    <string name="grietas_bloque">Grietas en bloque o fracturación múltiple</string>
    <string name="g_b">GB</string>
    <string name="grietas_pozos">Grietas en pozos y sumideros</string>
    <string name="g_a">GA</string>
    <string name="separacion_juntas">Separación de juntas longitudinales</string>
    <string name="s_j">SJ</string>
    <string name="deterioro_sello">Deterioro del sello</string>
    <string name="dst_dsl">DST - DSL</string>
    <string name="desportillamiento_juntas">Desportillamiento de juntas</string>
    <string name="dpt_dpl">DPT, DPL</string>
    <string name="descascaramiento">Descascaramiento</string>
    <string name="de">DE</string>
    <string name="desintegracion">Desintegración</string>
    <string name="di">DI</string>
    <string name="baches">Baches</string>
    <string name="bch">BCH</string>
    <string name="pulimiento">Pulimiento</string>
    <string name="pu">PU</string>
    <string name="escalonamiento_juntas">Escalonaminento de juntas longitudinales y transversales</string>
    <string name="ejl_ejt">EJL - EJT</string>
    <string name="levantamiento_localizado">Levantamiento localizado</string>
    <string name="let_lel">LET, LEL</string>
    <string name="parches">Parches</string>
    <string name="pcha">PCHA - PCHC</string>
    <string name="hundimientos">Hundimientos o Asentamientos</string>
    <string name="hu">HU</string>
    <string name="fisuracion_retraccion">Fisuración por retracción o Tipo malla</string>
    <string name="fr">FR</string>
    <string name="fisuras_ligeras">Fisuras ligeras de aparición temprana</string>
    <string name="ft">FT</string>
    <string name="fisuracion_durabilidad">Fisuración por durabilidad</string>
    <string name="fd">FD</string>
    <string name="bombeo_juntas">Bombeo sobre la junta transversal/longitudinal</string>
    <string name="bot_bol">BOT - BOL</string>
    <string name="ondulaciones">Ondulaciones</string>
    <string name="on">ON</string>
    <string name="descenso_berma">Descenso de la berma</string>
    <string name="db">DB</string>
    <string name="separacion_berma_pavimento">Separación entre la berma y el pavimento</string>
    <string name="sb">SB</string>
    <string name="losa_dimen">Dimensiones de la losa (m) </string>
    <string name= "no_placa"> No placa </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
