<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/marginTop"
    tools:context="com.alejo_zr.exceldb.Carretera.CarreteraRegistroEjemploActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ej_registro_carretera"
            android:textSize="@dimen/titulo"
            android:textStyle="bold"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHighlight="@color/colorAccent"
            android:layout_marginTop="@dimen/marginTopTV"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:textColorHighlight="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:text="@string/ej_carretera_nombre"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHighlight="@color/colorAccent"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/codigo"
                android:text="@string/ej_carretera_codigo"
                android:textColorHighlight="@color/colorAccent"
                android:textColorHint="@color/colorAccent"/>
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHighlight="@color/colorAccent"
            android:textColorHint="@color/colorAccent">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/territorial"
                android:textColorHighlight="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:text="@string/ej_carretera_territorial"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ej_carretera_admon"
            android:textStyle="bold|italic"
            android:textSize="@dimen/explicacion"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHighlight="@color/colorAccent"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/adminstracion"
                android:textColorHighlight="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:text="@string/ej_carretera_administracion"/>


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHighlight="@color/colorAccent"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/levantado"
                android:text="@string/ej_carretera_levantado"
                />

        </android.support.design.widget.TextInputLayout>




    </LinearLayout>


</ScrollView>
