<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_horizontal_margin"
    tools:context="com.alejo_zr.exceldb.Carretera.EditarCarreteraActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/campoNombreEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"/>


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
        android:id="@+id/campoCodigoEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/codigo"/>


    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/campoTerritorialEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/territorial"/>


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/campoAdmonEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/admon"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/campoLevantadoEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/levantado"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/marginTopBtn"
        >

        <Button
            android:id="@+id/btnEditarCarreteraActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editar"
            android:onClick="onClick"/>

    </LinearLayout>


    <EditText
        android:id="@+id/campoIdEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        android:visibility="visible"/>
    <TextView
        android:id="@+id/tvEditarNombreCarretera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>
