<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_horizontal_margin"
    tools:context="com.alejo_zr.exceldb.Segmento.Flexible.EditarSegmentoFlexActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTipoPavFlex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pavFlex"
            android:textSize="@dimen/titulo"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/tvNombre_Carretera_Segmento_EditarFlex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="@dimen/subTitulo"
            android:textStyle="bold|italic"
            android:layout_gravity="center_horizontal"
            />


        <TextView
            android:id="@+id/tvNumero_EditarFlex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numero"
            android:textSize="@dimen/subTitulo"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/marginTopTV"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_campoNCalzadas_EditarFlex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <EditText
                    android:id="@+id/campoNCalzadas_EditarFlex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nCalzadas"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_campoNCarriles_EditarFlex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <EditText
                    android:id="@+id/campoNCarriles_EditarFlex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nCarriles"/>
            </android.support.design.widget.TextInputLayout>



        </LinearLayout>

        <TextView
            android:id="@+id/tvAncho_EditarFlex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ancho"
            android:textSize="@dimen/subTitulo"
            android:textStyle="bold"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_campoAnchoCarril_EditarFlex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <EditText
                    android:id="@+id/campoAnchoCarril_EditarFlex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/anchoCarril"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_campoAnchoBerma_EditarFlex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <EditText
                    android:id="@+id/campoAnchoBerma_EditarFlex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/anchoBerma"/>
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/puntoReferencia"
            android:textSize="@dimen/subTitulo"
            android:textStyle="bold"/>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <EditText
                    android:id="@+id/campoPRI_EditarFlex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pri"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <EditText
                    android:id="@+id/campoPRF_EditarFlex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prf"/>
            </android.support.design.widget.TextInputLayout>



        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/campoComentarios_EditarFlex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comentarios"
                android:layout_marginTop="@dimen/marginTop"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnFechaEditarSegFlex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fecha"
                android:onClick="onClick" />

            <EditText
                android:id="@+id/campoFechaSegmentoFlexEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/fecha"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/marginTopBtn">

            <Button
                android:id="@+id/btnEditarSegmentoActivityFlex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/editar"
                android:onClick="onClick"/>

            <Button
                android:id="@+id/btnEliminarSegmentoFlex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eliminar"
                android:onClick="onClick"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_id_segmento_editarFlex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</ScrollView>
